final Refactor